# kiftd-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.en.md  README.md  build.bat  package.bat
data/: config.json
doc/: API.md  ARCHITECTURE.md  BUILD.md  CONFIG.md  DEPENDENCIES.md
src/: auth.cpp  auth.h  config.cpp  config.h  database.cpp  database.h  filestore.cpp  filestore.h  main.cpp  transcode_manager.cpp  transcode_manager.h
src/controllers/: auth_controller.cpp  auth_controller.h  file_controller.cpp  file_controller.h  folder_controller.cpp  folder_controller.h  play_history_controller.cpp  play_history_controller.h  share_controller.cpp  share_controller.h  transcode_controller.cpp  transcode_controller.h
src/utils/: sha256.cpp  sha256.h  uuid.cpp  uuid.h
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue
web/src/api/: index.ts
web/src/components/: FilePreview.vue  TranscodeDialog.vue
web/src/router/: index.ts
web/src/stores/: user.ts
web/src/utils/: sha256.ts
web/src/views/: HomeView.vue  LoginView.vue  PlayHistoryView.vue  PlayView.vue  SharesView.vue  TranscodeTasksView.vue
